--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ aiogram>=3.23.0
 pytz
 aiohttp>=3.9.0
 pydantic>=2.12.5
+gspread>=5.12.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
